--- a/assets/style.css
+++ b/assets/style.css
@@ -17,15 +17,15 @@ body {
 
 .container {
     background-color: #fff;
-    width: 600px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 600px;
     border-radius: 10px;
     box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
     overflow: hidden;
 }
 
 .quiz-header {
-    padding: 4rem;
+    padding: 3rem;
 }
 
 h2 {
@@ -62,4 +62,28 @@ button {
 
 button:hover {
     background-color: #00447b;
+}
+
+@media (max-width: 600px) {
+    .container {
+        border-radius: 0;
+        width: 90%;
+        border-radius: 10px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    .quiz-header {
+        padding: 1rem;
+    }
+
+    ul li {
+        font-size: 15px;
+    }
+
+    button {
+        font-size: 1rem;
+    }
 }
